--- a/MyAngularClient/src/app/products/products.component.html
+++ b/MyAngularClient/src/app/products/products.component.html
@@ -1,3 +1,63 @@
-<p>
-  products works!
-</p>
+<h1 class="h1">Product Inventory</h1>
+<div fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between stretch" class="products">
+  <table mat-table fxFlex="100%" fxFlex.gt-sm="66%" [dataSource]="dataSource" class="mat-elevation-z1">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef > Name </th>
+      <td mat-cell *matCellDef="let product"> {{product.name}} </td>
+    </ng-container>
+    <ng-container matColumnDef="sku">
+      <th mat-header-cell *matHeaderCellDef> SKU </th>
+      <td mat-cell *matCellDef="let product"> {{product.sku}} </td>
+    </ng-container>
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef> Description </th>
+      <td mat-cell *matCellDef="let product"> {{product.description}} </td>
+    </ng-container>
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef> Price </th>
+      <td mat-cell *matCellDef="let product"> {{product.price}} </td>
+    </ng-container>
+    <ng-container matColumnDef="stock">
+      <th mat-header-cell *matHeaderCellDef> Stock Level </th>
+      <td mat-cell *matCellDef="let product"> {{product.stock}} </td>
+    </ng-container>
+    <ng-container matColumnDef="edit">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let product">
+        <button mat-icon-button (click)="editProduct(product)"><mat-icon>edit</mat-icon></button>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="delete">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let product">
+        <button mat-icon-button (click)="deleteProduct(product)"><mat-icon>delete</mat-icon></button>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  <mat-divider fxShow="false" fxShow.gt-sm [vertical]="true"></mat-divider>
+  <div>
+    <h2>Selected Product</h2>
+    <label>Name
+      <input type="text" [(ngModel)]="selectedProduct.name">
+    </label>
+    <label>SKU
+      <input type="text" [(ngModel)]="selectedProduct.sku">
+    </label>
+    <label>Description
+      <input type="text" [(ngModel)]="selectedProduct.description">
+    </label>
+    <label>Price
+      <input type="text" [(ngModel)]="selectedProduct.price">
+    </label>
+    <label>Stock Level
+      <input type="text" [(ngModel)]="selectedProduct.stock">
+    </label>
+    <button mat-flat-button (click)="updateProduct()">{{(selectedProduct.id!==undefined)?'Update':'Create'}}</button>
+    <button mat-flat-button (click)="clearProduct()">Clear</button>
+  </div>
+  <div class="loading" *ngIf="loading">
+    <mat-spinner></mat-spinner>
+  </div>
+</div>
