Updates to code after QA

--- a/MyAngularClient/src/app/home/home.component.html
+++ b/MyAngularClient/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="hero">
   <div>
     <h1>Hello World</h1>
-    <p class="lead">This is the homepage of your vue app</p>
+    <p class="lead">This is the homepage of your Angular app</p>
   </div>
 </div>
