--- a/MyAngularClient/src/app/products/products.component.html
+++ b/MyAngularClient/src/app/products/products.component.html
@@ -2,35 +2,39 @@
 <div fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between stretch" class="products">
   <table mat-table fxFlex="100%" fxFlex.gt-sm="66%" [dataSource]="dataSource" class="mat-elevation-z1">
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef > Name </th>
-      <td mat-cell *matCellDef="let product"> {{product.name}} </td>
+      <th mat-header-cell *matHeaderCellDef> Name</th>
+      <td mat-cell *matCellDef="let product"> {{product.name}}</td>
     </ng-container>
     <ng-container matColumnDef="sku">
-      <th mat-header-cell *matHeaderCellDef> SKU </th>
-      <td mat-cell *matCellDef="let product"> {{product.sku}} </td>
+      <th mat-header-cell *matHeaderCellDef> SKU</th>
+      <td mat-cell *matCellDef="let product"> {{product.sku}}</td>
     </ng-container>
     <ng-container matColumnDef="description">
-      <th mat-header-cell *matHeaderCellDef> Description </th>
-      <td mat-cell *matCellDef="let product"> {{product.description}} </td>
+      <th mat-header-cell *matHeaderCellDef> Description</th>
+      <td mat-cell *matCellDef="let product"> {{product.description}}</td>
     </ng-container>
     <ng-container matColumnDef="price">
-      <th mat-header-cell *matHeaderCellDef> Price </th>
-      <td mat-cell *matCellDef="let product"> {{product.price}} </td>
+      <th mat-header-cell *matHeaderCellDef> Price</th>
+      <td mat-cell *matCellDef="let product"> {{product.price}}</td>
     </ng-container>
     <ng-container matColumnDef="stock">
-      <th mat-header-cell *matHeaderCellDef> Stock Level </th>
-      <td mat-cell *matCellDef="let product"> {{product.stock}} </td>
+      <th mat-header-cell *matHeaderCellDef> Stock Level</th>
+      <td mat-cell *matCellDef="let product"> {{product.stock}}</td>
     </ng-container>
     <ng-container matColumnDef="edit">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let product">
-        <button mat-icon-button (click)="editProduct(product)"><mat-icon>edit</mat-icon></button>
+        <button mat-icon-button (click)="editProduct(product)">
+          <mat-icon>edit</mat-icon>
+        </button>
       </td>
     </ng-container>
     <ng-container matColumnDef="delete">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let product">
-        <button mat-icon-button (click)="deleteProduct(product)"><mat-icon>delete</mat-icon></button>
+        <button mat-icon-button (click)="deleteProduct(product)">
+          <mat-icon>delete</mat-icon>
+        </button>
       </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
